@@ -4,6 +4,9 @@
 # which local port should uoproxy listen on?
 port 2593
 
+# or: which IP and port should uoproxy listen on?
+#bind 127.0.0.1:2593
+
 # address of the login server
 server "dfi.defianceuo.com:2593"
 
